# PrismShell

./: README.md
src-core/: Cargo.toml  tauri.conf.json
src-core/src/: main.rs  session.rs  ssh.rs  storage.rs
src-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
src-ui/src/: App.tsx  index.css
src-ui/src/api/: tauri.ts
src-ui/src/components/: ProfileModal.tsx  TerminalComponent.tsx
src-ui/src/context/: ThemeContext.tsx
themes/: prism-dark.json
